Delete feature implemented

--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -1,5 +1,18 @@
 All Bookmarks:
 
-<% @urls.each do |url| %>
-  <p><%= url %></p>
-<% end %>
+<%# <% @bookmarks.each do |bookmark| %>
+  <%# <p><%= bookmark %>
+<%# <% end %>
+
+<ul>
+  <% @bookmarks.each do |bookmark| %>
+    <li class="bookmark" id="bookmark-<%=bookmark.id %>">
+      <a href="<%= bookmark.url %>" target="_blank">
+        <%= bookmark.title %>
+      </a>
+      <form action="/bookmarks/<%= bookmark.id %>" method="post">
+      <input type='hidden' name='_method' value='DELETE'/>
+      <input type="submit" value="Delete" />
+    </li>
+  <% end %>
+</ul>
