--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -1,18 +1,14 @@
 All Bookmarks:
-
-<%# <% @bookmarks.each do |bookmark| %>
-  <%# <p><%= bookmark %>
-<%# <% end %>
-
 <ul>
   <% @bookmarks.each do |bookmark| %>
-    <li class="bookmark" id="bookmark-<%=bookmark.id %>">
+    <li class="bookmark" id="bookmark-<%= bookmark.id %>">
       <a href="<%= bookmark.url %>" target="_blank">
         <%= bookmark.title %>
       </a>
       <form action="/bookmarks/<%= bookmark.id %>" method="post">
       <input type='hidden' name='_method' value='DELETE'/>
       <input type="submit" value="Delete" />
+      </form>
     </li>
   <% end %>
 </ul>
