--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -9,6 +9,10 @@ All Bookmarks:
       <input type='hidden' name='_method' value='DELETE'/>
       <input type="submit" value="Delete" />
       </form>
+
+      <form action="/bookmarks/<%= bookmark.id %>/edit" method="get">
+        <input type="submit" value="Edit" />
+      </form>
     </li>
   <% end %>
 </ul>
