Allow comments feature implemented

--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -1,5 +1,9 @@
+<h1> <%= flash[:notice] %> </h1>
+<br>
 All Bookmarks:
-<ul>
+
+
+
   <% @bookmarks.each do |bookmark| %>
     <li class="bookmark" id="bookmark-<%= bookmark.id %>">
       <a href="<%= bookmark.url %>" target="_blank">
@@ -13,6 +17,16 @@ All Bookmarks:
       <form action="/bookmarks/<%= bookmark.id %>/edit" method="get">
         <input type="submit" value="Edit" />
       </form>
+
+      <form action="/bookmarks/<%= bookmark.id %>/comments/new" method="get">
+        <input type="submit" value="Add comment" />
+      </form>
+
+      <ul>
+      <% bookmark.comments.each do |comment| %>
+        <li><%= comment.text %></li>
+      <% end %>
+      </ul>
+
     </li>
-  <% end %>
-</ul>
+<% end %>
