--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -2,6 +2,13 @@
 <br>
 All Bookmarks:
 
+<% if @user %>
+  <h1>Welcome, <%= @user.email %></h1>
+<% end %>
+
+<form action="/sessions/destroy" method="post">
+  <input type="submit" value="Sign out" />
+</form>
 
 
   <% @bookmarks.each do |bookmark| %>
